--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
             - "3000:3000"
         volumes: 
             - "./backend:/app"
+            - /app/node_modules
 
     froentend:
         container_name: vue-demo-front
@@ -19,3 +20,4 @@ services:
             - "80:8080"
         volumes:
             - "./frontend:/app"
+            - /app/node_modules
